--- a/artifacts/src/i18n/mock-relying-party-i18n-bundle/default.json
+++ b/artifacts/src/i18n/mock-relying-party-i18n-bundle/default.json
@@ -4,7 +4,8 @@
     "hi": "हिंदी",
     "ar": "عربى",
     "kn": "ಕನ್ನಡ",
-    "ta": "தமிழ்"
+    "ta": "தமிழ்",
+    "fr": "Français"
   },
   "rtlLanguages": ["ar"]
 }
