updated email value.

--- a/artifacts/src/i18n/mock-relying-party-i18n-bundle/fr.json
+++ b/artifacts/src/i18n/mock-relying-party-i18n-bundle/fr.json
@@ -71,7 +71,7 @@
     "date": "DATE",
     "vaccination_center": "CENTRE DE VACCINATION",
     "total_cost": "COÛT TOTAL",
-    "email": "E-mail",
+    "email": "Email",
     "dob": "Date de naissance",
     "gender": "Genre",
     "mobile_no": "Numéro de mobile",
