--- a/artifacts/src/i18n/pre-registration-i18n-bundle/i18n/fra.json
+++ b/artifacts/src/i18n/pre-registration-i18n-bundle/i18n/fra.json
@@ -520,7 +520,7 @@
     "text_available": "Candidats disponibles",
     "text_selected": "Candidats sélectionnés",
     "text_availability": "Réservation disponible",
-    "text_slots": "fentes",
+    "text_slots": "créneaux",
     "action_done": "TERMINÉ",
     "action_back": "RETOUR",
     "action_bookLater": "RÉSERVER PLUS TARD",
