--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/device-specification.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/device-specification.json
@@ -4,7 +4,7 @@
     "buttonName": {
       "eng": "Activate",
       "ara": "تنشيط",
-      "fra": "déclencher",
+      "fra": "Activer",
       "tam": "செயல்படுத்த",
       "hin": "सक्रिय",
       "kan": "ಸಕ್ರಿಯಗೊಳಿಸಿ"
@@ -19,7 +19,7 @@
       "buttonName": {
         "eng": "Deactivate",
         "ara": "الغاء تنشيط",
-        "fra": "désactiver",
+        "fra": "Désactiver",
         "tam": "செயலிழக்க",
         "hin": "निष्क्रिय करें",
         "kan": "ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ"
@@ -49,7 +49,7 @@
       "buttonName": {
         "eng": "Create",
         "ara": "إضافة مركز",
-        "fra": "Ajouter le centre",
+        "fra": "Ajouter",
         "tam": "உருவாக்கு",
         "hin": "बनाएं",
         "kan": "ರಚಿಸಿ"
@@ -64,7 +64,7 @@
     {
       "buttonName": {
         "eng": "Filter",
-        "fra": "filtre",
+        "fra": "Filtrer",
         "ara": "تصفيه",
         "tam": "வடிகட்டி",
         "hin": "फ़िल्टर",
@@ -106,7 +106,7 @@
       "label": {
         "eng": "Description",
         "ara": "وصف",
-        "fra": "description",
+        "fra": "Description",
         "tam": "விளக்கம்",
         "hin": "विवरण",
         "kan": "ವಿವರಣೆ"
@@ -309,7 +309,7 @@
     "filterlabel": {
       "eng": "Name",
       "ara": "اسم",
-      "fra": "prénom",
+      "fra": "Prénom",
       "tam": "பெயர்",
       "hin": "नाम",
       "kan": "ಹೆಸರು"
