--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/dynamicfields.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/dynamicfields.json
@@ -5,7 +5,7 @@
       "buttonName": {
         "eng": "Activate",
         "ara": "تنشيط",
-        "fra": "déclencher",
+        "fra": "Activer",
         "hin": "सक्रिय",
         "kan": "ಸಕ್ರಿಯಗೊಳಿಸಿ",
         "tam": "செயல்படுத்த"
@@ -20,7 +20,7 @@
       "buttonName": {
         "eng": "Deactivate",
         "ara": "الغاء تنشيط",
-        "fra": "désactiver",
+        "fra": "Désactiver",
         "hin": "निष्क्रिय करें",
         "kan": "ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ",
         "tam": "செயலிழக்க"
@@ -35,7 +35,7 @@
       "buttonName": {
         "eng": "Edit",
         "ara": "تصحيح",
-        "fra": "modifier",
+        "fra": "Modifier",
         "hin": "संपादित करें",
         "kan": "ತಿದ್ದು",
         "tam": "தொகு"
@@ -50,7 +50,7 @@
       "buttonName": {
         "eng": "Create",
         "ara": "إضافة مركز",
-        "fra": "Ajouter le centre",
+        "fra": "Ajouter",
         "hin": "बनाएं",
         "kan": "ರಚಿಸಿ",
         "tam": "உருவாக்கு"
@@ -102,7 +102,7 @@
         }, {
           "eng": "Name",
           "ara": "اسم",
-          "fra": "prénom",
+          "fra": "Prénom",
           "tam": "பெயர்",
           "hin": "नाम",
           "kan": "ಹೆಸರು"
@@ -144,7 +144,7 @@
       "name": "description",
       "showInListView": "true",
       "showInSingleView": "true",
-      "label": { "eng": "Description", "ara": "وصف", "fra": "La description","hin": "विवरण", "kan": "ವಿವರಣೆ", "tam": "விளக்கம்"},
+      "label": { "eng": "Description", "ara": "وصف", "fra": "Description","hin": "विवरण", "kan": "ವಿವರಣೆ", "tam": "விளக்கம்"},
       "sortOrder": "3",
       "showAsLink": "",
       "linkType": "",
@@ -268,7 +268,7 @@
   "filterColumns":  [
     {
       "filtername": "description",
-      "filterlabel": { "eng": "Description", "ara": "وصف", "fra": "La description","hin": "विवरण", "kan": "ವಿವರಣೆ", "tam": "விளக்கம்"},
+      "filterlabel": { "eng": "Description", "ara": "وصف", "fra": "Description","hin": "विवरण", "kan": "ವಿವರಣೆ", "tam": "விளக்கம்"},
       "filterType": "equals",
       "autocomplete": "false",
       "dropdown": "false",
