--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/master-data-entity-spec.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/master-data-entity-spec.json
@@ -55,7 +55,7 @@
         "label": {
           "eng": "Device Specs",
           "ara": "مواصفات الجهاز",
-          "fra": "Spécifications de l'appareil",
+          "fra": "Spécifications du périphérique",
           "hin": "डिवाइस चश्मा      ",
           "kan": "ಸಾಧನ ವಿವರಣೆಗಳು ",
           "tam": "சாதன விவரக்குறிப்புகள்    "
