--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/masterdataupload.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/masterdataupload.json
@@ -5,7 +5,7 @@
       "buttonName": {
         "eng": "Upload Data",
         "ara": "إضافة مركز",
-        "fra": "Ajouter le centre",
+        "fra": "Téléverser",
         "hin": "डेटा अपलोड करें  ",
         "kan": "ಡೇಟಾವನ್ನು ಅಪ್‌ಲೋಡ್ ಮಾಡಿ   ",
         "tam": "தரவைப் பதிவேற்றுக  "
@@ -22,7 +22,7 @@
     {
       "name": "transcationId",
       "showInListView": "true",
-      "label": { "eng": "Transcation ID", "ara": "مركز ", "fra": "Centre" ,
+      "label": { "eng": "Transcation ID", "ara": "مركز ", "fra": "No Transaction" ,
         "hin": "लेन-देन आईडी  ",
         "kan": "ವಹಿವಾಟು ID   ",
         "tam": "பரிவர்த்தனை ஐடி  "},
@@ -34,7 +34,7 @@
     {
       "name": "entityName",
       "showInListView": "true",
-      "label": {"eng": "Table Name", "ara": "نوع المركز", "fra": "Type de centre",
+      "label": {"eng": "Table Name", "ara": "نوع المركز", "fra": "Nom de la Table",
         "hin": "तालिका नाम   ",
         "kan": "ಟೇಬಲ್ ಹೆಸರು ",
         "tam": " அட்டவணை பெயர்   "},
@@ -46,7 +46,7 @@
     {
       "name": "operation",
       "showInListView": "true",
-      "label": { "eng": "Operation", "ara": "حاله", "fra": "statut" ,
+      "label": { "eng": "Operation", "ara": "حاله", "fra": "Opération" ,
         "hin": "कार्यवाही    ",
         "kan": "ಕಾರ್ಯಾಚರಣೆ  ",
         "tam": " செயல்பாடு  "},
@@ -58,7 +58,7 @@
     {
       "name": "count",
       "showInListView": "",
-      "label": {"eng": "Count","ara": "المستخدمين","fra": "Utilisateur","hin": "गिनती   ",
+      "label": {"eng": "Count","ara": "المستخدمين","fra": "Nombre","hin": "गिनती   ",
         "kan": "ಎಣಿಕೆ  ",
         "tam": "எண்ணிக்கை "},
       "sortOrder": "",
@@ -69,7 +69,7 @@
     {
       "name": "status",
       "showInListView": "",
-      "label": {"eng": "Status", "ara": "الأجهزة", "fra": "Dispositifs",
+      "label": {"eng": "Status", "ara": "الأجهزة", "fra": "Statut",
         "hin": "स्थिति   ",
         "kan": "ಸ್ಥಿತಿ   ",
         "tam": "நிலை "},
@@ -81,7 +81,7 @@
     {
       "name": "uploadedBy",
       "showInListView": "",
-      "label": {"eng": "Uploaded By", "ara": "آلات", "fra": "Machines",
+      "label": {"eng": "Uploaded By", "ara": "آلات", "fra": "Téléversé par",
         "hin": "द्वारा डाली गई  ",
         "kan": "ಇವರಿಂದ ಅಪ್‌ಲೋಡ್ ಮಾಡಲಾಗಿದೆ   ",
         "tam": "பதிவேற்றியது  "},
@@ -93,7 +93,7 @@
     {
       "name": "timeStamp",
       "showInListView": "",
-      "label": {"eng": "Date Time", "ara": "هاتف مُتَكَون", "fra": "Téléphone Contact",
+      "label": {"eng": "Date Time", "ara": "هاتف مُتَكَون", "fra": "Date & Heure",
         "hin": "समय टिकट    ",
         "kan": "ಟೈಮ್‌ಸ್ಟ್ಯಾಂಪ್  ",
         "tam": " நேர முத்திரை  "},
