--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/templates.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/templates.json
@@ -5,7 +5,7 @@
       "buttonName": {
         "eng": "Activate",
         "ara": "تنشيط",
-        "fra": "Déclencher",
+        "fra": "Activer",
         "hin": "सक्रिय ",
         "kan": "ಸಕ್ರಿಯಗೊಳಿಸಿ  ",
         "tam": "செயல்படுத்த "
