--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/user.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/user.json
@@ -5,7 +5,7 @@
       "buttonName": {
         "eng": "Remap",
         "ara": "إعادة رسم خريطة",
-        "fra": "remapper",
+        "fra": "Re-mapper",
         "hin": "सरीमैप",
         "kan": "ರೀಮ್ಯಾಪ್",
         "tam": "மறுவடிவமைப்பு "
@@ -20,7 +20,7 @@
       "buttonName": {
         "eng": "Map to Center",
         "ara":"تعيين إلى المركز",
-        "fra": "Carte vers le centre",
+        "fra": "Mapper à un centre",
         "hin": "नक्शा से केंद्र",
         "kan": "ನಕ್ಷೆಯಿಂದ ಕೇಂದ್ರಕ್ಕೆ",
         "tam": "வரைபடத்திலிருந்து மையத்திற்கு"
@@ -50,7 +50,7 @@
       "buttonName": {
         "eng": "Activate",
         "ara": "تنشيط",
-        "fra": "déclencher",
+        "fra": "Activer",
         "hin": "सक्रिय",
         "kan": "ಸಕ್ರಿಯಗೊಳಿಸಿ",
         "tam": "செயல்படுத்த"
@@ -65,7 +65,7 @@
       "buttonName": {
         "eng": "Deactivate",
         "ara": "الغاء تنشيط",
-        "fra": "désactiver",
+        "fra": "Désactiver",
         "hin": "निष्क्रिय करें",
         "kan": "ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ",
         "tam": "செயலிழக்க"
@@ -79,7 +79,7 @@
     {
       "buttonName": {
         "eng": "Filter",
-        "fra": "filtre",
+        "fra": "Filtrer",
         "ara": "تصفيه",
         "tam": "வடிகட்டி",
         "hin": "फ़िल्टर",
@@ -117,7 +117,7 @@
       "label": {
         "eng": "Zone Name",
         "ara": "نوع المركز",
-        "fra": "Type de centre",
+        "fra": "Nom de la zone",
         "hin": "जोन कोड",
         "kan": "ವಲಯ ಕೋಡ್ ",
         "tam": "மண்டல குறியீடு"
@@ -151,7 +151,7 @@
       "label": {
         "eng": "CreatedBy",
         "ara": "الشخص المسؤول",
-        "fra": "Personne-ressource",
+        "fra": "Créé par",
         "hin": "के द्वारा बनाई गई ",
         "kan": "ರಚಿಸಿದವರು",
         "tam": "உருவாக்கப்பட்டது  "
@@ -167,7 +167,7 @@
       "label": {
         "eng": "Created Time",
         "ara": "الوقت الذي تم إنشاؤه",
-        "fra": "Temps créé",
+        "fra": "Temps de création",
         "hin": "बनाया गया समय ",
         "kan": "ಸಮಯವನ್ನು ರಚಿಸಲಾಗಿದೆ ",
         "tam": "நேரம் உருவாக்கப்பட்டது "
@@ -180,7 +180,7 @@
     {
       "name": "isActive",
       "showInListView": "true",
-      "label": { "eng": "Status", "ara": "حاله", "fra": "statut","hin": "स्थिति", "kan": "ಸ್ಥಿತಿ", "tam": "நிலை" },
+      "label": { "eng": "Status", "ara": "حاله", "fra": "Statut","hin": "स्थिति", "kan": "ಸ್ಥಿತಿ", "tam": "நிலை" },
       "sortOrder": "",
       "showAsLink": "false",
       "linkType": "",
