--- a/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/devices.json
+++ b/artifacts/src/i18n/admin-entity-spec-bundle/entity-spec/devices.json
@@ -64,7 +64,7 @@
       "buttonName": {
         "eng": "Create Device",
         "ara": "إإنشاء الجهاز",
-        "fra": "Ajouter",
+        "fra": "Ajouter Périphérique",
         "tam": "சாதனத்தை உருவாக்கவும்",
         "hin": "डिवाइस बनाएं",
         "kan": "ಸಾಧನವನ್ನು ರಚಿಸಿ"
